--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -7,16 +7,16 @@ Each dataset is unique, and depending on the task, some datasets may require add
 <div class="mt-4">
    <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-3 md:gap-y-4 md:gap-x-5">
       <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#nlp"
-         ><div class="w-full text-center bg-gradient-to-br from-emerald-400 to-blue-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">NLP</div>
-         <p class="text-gray-700">Tokenize a dataset and train a model to determine whether a pair of sentences have the same meaning.</p>
-      </a>
-      <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#audio"
-         ><div class="w-full text-center bg-gradient-to-br from-violet-400 to-orange-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Audio</div>
+         ><div class="w-full text-center bg-gradient-to-r from-violet-300 via-sky-400 to-green-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Audio</div>
          <p class="text-gray-700">Resample an audio dataset and get it ready for a model to classify what type of banking issue a speaker is calling about.</p>
       </a>
+      <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#audio"
+         ><div class="w-full text-center bg-gradient-to-r from-rose-300 via-purple-400 to-sky-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Vision</div>
+         <p class="text-gray-700">Apply data augmentation to an image dataset and get it ready for a model to diagnose disease in bean plants.</p>
+      </a>
       <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#vision"
-         ><div class="w-full text-center bg-gradient-to-br from-cyan-400 to-pink-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Vision</div>
-         <p class="text-gray-700">Apply a data augmentation to an image dataset and get it ready for a model to diagnose disease in bean plants.</p>
+         ><div class="w-full text-center bg-gradient-to-r from-orange-300 via-red-400 to-violet-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">NLP</div>
+         <p class="text-gray-700">Tokenize a dataset and train a model to determine whether a pair of sentences have the same meaning.</p>
       </a>
    </div>
 </div>
@@ -47,7 +47,7 @@ pip install datasets[vision]
 
 ## NLP
 
-The fastest and easiest way to get started is by loading an existing dataset from the [Hugging Face Hub](https://huggingface.co/datasets). There are thousands of datasets to choose from, spanning many tasks. In this guide, you'll load the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset to train a model to determine whether a pair of sentences mean the same thing. As with all text datasets, you'll need to tokenize the dataset to prepare it for training.
+The fastest and easiest way to get started is by loading an existing dataset from the [Hugging Face Hub](https://huggingface.co/datasets). There are thousands of datasets to choose from, spanning many tasks. For the quickstart, you'll load the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset to train a model to determine whether a pair of sentences mean the same thing. As with all text datasets, you'll need to tokenize the dataset to prepare it for training.
 
 **1**. Load the MRPC dataset by providing the [`load_dataset`] function with the dataset name, dataset configuration (not all datasets will have a configuration), and dataset split:
 
@@ -96,13 +96,11 @@ Use the [`~Dataset.map`] function to speed up processing by applying your tokeni
 >>> dataset = dataset.map(lambda examples: {"labels": examples["label"]}, batched=True)
 ```
 
-**5**. Use the [`~Dataset.set_format`] function to set the dataset format according to the machine learning framework you're using and specify the columns you want to format. The [`~Dataset.set_format`] function applies the formatting on-the-fly. 
-
-After setting the format, create a dataset using your framework's class or API:
+**5**. Set the dataset format according to the machine learning framework you're using.
 
 <frameworkcontent>
 <pt>
-Wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc_view/data.html?highlight=torch%20utils%20data%20dataloader#torch.utils.data.DataLoader):
+Use the [`~Dataset.set_format`] function to set the dataset format to `torch` and specify the columns you want to format. This function applies formatting on-the-fly. After converting to PyTorch tensors, wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc_view/data.html?highlight=torch%20utils%20data%20dataloader#torch.utils.data.DataLoader):
 
 ```py
 >>> import torch
@@ -112,45 +110,28 @@ Wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc
 ```
 </pt>
 <tf>
-Wrap the dataset in [`tf.data.Dataset`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset):
+Use the [`~Dataset.to_tf_dataset`] function to set the dataset format to be compatible with TensorFlow. You'll also need to import a [data collator](https://huggingface.co/docs/transformers/main_classes/data_collator#transformers.DataCollatorWithPadding) from 🤗 Transformers to combine the varying sequence lengths into a single batch of equal lengths:
 
 ```py
 >>> import tensorflow as tf
+>>> from transformers import DataCollatorWithPadding
 
->>> dataset.set_format(type="tensorflow", columns=["input_ids", "token_type_ids", "attention_mask", "labels"])
->>> features = {x: dataset[x] for x in ["input_ids", "token_type_ids", "attention_mask"]}
->>> tf_dataset = tf.data.Dataset.from_tensor_slices((features, dataset["labels"])).batch(32)
+>>> data_collator = DataCollatorWithPadding(tokenizer=tokenizer, return_tensors="tf")
+>>> tf_dataset = dataset.to_tf_dataset(
+...     columns=["input_ids", "token_type_ids", "attention_mask"],
+...     label_cols=["labels"],
+...     batch_size=2,
+...     collate_fn=data_collator,
+...     shuffle=True)
 ```
 </tf>
 </frameworkcontent>
 
-**6**. Start training with the machine learning framework you're using!
-
-```py
->>> from tqdm import tqdm
->>> device = 'cuda' if torch.cuda.is_available() else 'cpu' 
->>> model.train().to(device)
->>> optimizer = torch.optim.AdamW(params=model.parameters(), lr=1e-5)
->>> for epoch in range(3):
-...     for i, batch in enumerate(tqdm(dataloader)):
-...         batch = {k: v.to(device) for k, v in batch.items()}
-...         outputs = model(**batch)
-...         loss = outputs[0]
-...         loss.backward()
-...         optimizer.step()
-...         optimizer.zero_grad()
-...         if i % 10 == 0:
-...             print(f"loss: {loss}")
-===PT-TF-SPLIT===
->>> loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(reduction=tf.keras.losses.Reduction.NONE, from_logits=True)
->>> opt = tf.keras.optimizers.Adam(learning_rate=3e-5)
->>> model.compile(optimizer=opt, loss=loss_fn, metrics=["accuracy"])
->>> model.fit(tfdataset, epochs=3)
-```
+**6**. Start training with your machine learning framework! Check out the 🤗 Transformers [fine-tuning tutorial](https://huggingface.co/docs/transformers/training) for an example of how to train a model on your dataset.
 
 ## Audio
 
-Audio datasets are loaded just like text datasets. However, an audio dataset is preprocessed a bit differently. Instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor). An audio input may also require resampling its sampling rate to match the sampling rate of the pretrained model you're using. In this guide, you'll prepare the [MInDS-14](https://huggingface.co/datasets/PolyAI/minds14) dataset for a model train on and classify the banking issue a customer is having.
+Audio datasets are loaded just like text datasets. However, an audio dataset is preprocessed a bit differently. Instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor). An audio input may also require resampling its sampling rate to match the sampling rate of the pretrained model you're using. In this quickstart, you'll prepare the [MInDS-14](https://huggingface.co/datasets/PolyAI/minds14) dataset for a model train on and classify the banking issue a customer is having.
 
 **1**. Load the MInDS-14 dataset by providing the [`load_dataset`] function with the dataset name, dataset configuration (not all datasets will have a configuration), and a dataset split:
 
@@ -205,11 +186,39 @@ Once you have the `preprocess_function`, use the [`~Dataset.map`] function to sp
 >>> dataset = dataset.rename_column("intent_class", "labels")
 ```
 
-**6**. Create a dataset using your framework's class or API, and start training!
+**6**. Set the dataset format according to the machine learning framework you're using.
+
+<frameworkcontent>
+<pt>
+Use the [`~Dataset.set_format`] function to set the dataset format to `torch` and specify the columns you want to format. This function applies formatting on-the-fly. After converting to PyTorch tensors, wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc_view/data.html?highlight=torch%20utils%20data%20dataloader#torch.utils.data.DataLoader):
+
+```py
+>>> from torch.utils.data import DataLoader
+
+>>> dataset.set_format(type="torch", columns=["input_values", "labels"])
+>>> dataloader = DataLoader(dataset, batch_size=4)
+```
+</pt>
+<tf>
+Use the [`~Dataset.to_tf_dataset`] function to set the dataset format to be compatible with TensorFlow. You'll also need to import a [data collator](https://huggingface.co/docs/transformers/main_classes/data_collator#transformers.DataCollatorWithPadding) from 🤗 Transformers to combine the varying sequence lengths into a single batch of equal lengths:
+
+```py
+>>> import tensorflow as tf
+
+>>> tf_dataset = dataset.to_tf_dataset(
+...     columns=["input_values"],
+...     label_cols=["labels"],
+...     batch_size=4,
+...     shuffle=True)
+```
+</tf>
+</frameworkcontent>
+
+**7**. Start training with your machine learning framework! Check out the 🤗 Transformers [audio classification guide](https://huggingface.co/docs/transformers/tasks/audio_classification) for an example of how to train a model on an audio dataset.
 
 ## Vision
 
-Image datasets are loaded just like text datasets. However, instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor) to preprocess the dataset. An image input is a sequence of pixel values that represent an image. Applying some data augmentation to an image in computer vision is common to make the model more robust against overfitting. You're free to use any data augmentation library you want, and then you can apply the augmentations to your dataset with 🤗 Datasets. In this guide, you'll load the [Beans](https://huggingface.co/datasets/beans) dataset and get it ready for the model to train on and identify disease from the leaf images.
+Image datasets are loaded just like text datasets. However, instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor) to preprocess the dataset. An image input is a sequence of pixel values that represent an image. Applying some data augmentation to an image in computer vision is common to make the model more robust against overfitting. You're free to use any data augmentation library you want, and then you can apply the augmentations to your dataset with 🤗 Datasets. In this quickstart, you'll load the [Beans](https://huggingface.co/datasets/beans) dataset and get it ready for the model to train on and identify disease from the leaf images.
 
 **1**. Load the Beans dataset by providing the [`load_dataset`] function with the dataset name and a dataset split:
 
@@ -225,10 +234,7 @@ Image datasets are loaded just like text datasets. However, instead of a tokeniz
 >>> from torchvision.transforms import Compose, ColorJitter, ToTensor
 
 >>> jitter = Compose(
-...     [
-...          ColorJitter(brightness=0.25, contrast=0.25, saturation=0.25, hue=0.5),
-...          ToTensor(),
-...     ]
+...     [ColorJitter(brightness=0.5, hue=0.5), ToTensor()]
 ... )
 ```
 
@@ -240,13 +246,37 @@ Image datasets are loaded just like text datasets. However, instead of a tokeniz
 ...     return examples
 ```
 
-**4**. Use the [`~Dataset.set_transform`] function to apply the transformation on-the-fly to your dataset:
+**4**. Use the [`~Dataset.with_transform`] function to apply the data augmentations on-the-fly:
 
 ```py
->>> dataset = dataset.set_transform(transforms)
+>>> dataset = dataset.with_transform(transforms)
 ```
 
-**5**. Create a dataset using your framework's class or API, and start training!
+**5**. Set the dataset format according to the machine learning framework you're using.
+
+<frameworkcontent>
+<pt>
+Wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc_view/data.html?highlight=torch%20utils%20data%20dataloader#torch.utils.data.DataLoader). You'll also need to create a collate function to collate the samples into batches:
+
+```py
+>>> from torch.utils.data import DataLoader
+
+>>> def collate_fn(examples):
+...     images = []
+...     labels = []
+...     for example in examples:
+...         images.append((example["pixel_values"]))
+...         labels.append(example["labels"])
+...         
+...     pixel_values = torch.stack(images)
+...     labels = torch.tensor(labels)
+...     return {"pixel_values": pixel_values, "labels": labels}
+>>> dataloader = DataLoader(dataset, collate_fn=collate_fn, batch_size=4)
+```
+</pt>
+</frameworkcontent>
+
+**6**. Start training with your machine learning framework! Check out the 🤗 Transformers [image classification guide](https://huggingface.co/docs/transformers/tasks/image_classification) for an example of how to train a model on an image dataset.
 
 ## What's next?
 
