--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -21,14 +21,25 @@ array([[1, 2],
        [3, 4]])>}
 ```
 
+This can be useful for converting your dataset to a dict of `Tensor` objects, or for writing a generator to load TF
+samples from it. If you wish to convert the entire dataset to `Tensor`, simply use an empty slice:
+
+```py
+>>> ds[:]
+{'data': <tf.Tensor: shape=(2, 2), dtype=int64, numpy=
+array([[1, 2],
+       [3, 4]])>}
+```
+
 ## Data loading
 
 ### Interoperability with tf.data
 
 Although you can load individual samples and batches just by indexing into your dataset, this won't work if you want
 to use Keras methods like `fit()` and `predict()`. You could write a generator function that shuffles and loads batches
-from your dataset and `fit()` on that, but that sounds like a lot of unnecessary work. Instead, we recommend converting
-your dataset to a `tf.data.Dataset` using the `to_tf_dataset()` method.
+from your dataset and `fit()` on that, but that sounds like a lot of unnecessary work. Instead, if you want to stream
+data from your dataset on-the-fly, we recommend converting your dataset to a `tf.data.Dataset` using the
+`to_tf_dataset()` method.
 
 The `tf.data.Dataset`` class covers a wide range of use-cases - it is often created from Tensors in memory, or using a load function to read files on disc
 or external storage. The dataset can be transformed arbitrarily with the `map()` method, or methods like `batch()`
@@ -60,18 +71,50 @@ Using `to_tf_dataset()` is straightforward. Once your dataset is preprocessed an
             )
 ```
 
-The returned `tf_ds` object here is now fully ready to train on, and can be passed directly to `model.fit()`!
+The returned `tf_ds` object here is now fully ready to train on, and can be passed directly to `model.fit()`! Note
+that you set the batch size when creating the dataset, and so you don't need to specify it when calling `fit()`:
+
+```py
+>>> model.fit(tf_ds, epochs=2)
+```
 
 For a full description of the arguments, please see the `to_tf_dataset()` documentation(link). In many cases,
 you will also need to add a `collate_fn` to your call. This is a function that takes multiple elements of the dataset
 and combines them into a single batch. When all elements have the same length, the built-in default collator will
-suffice, but for more complex tasks a custom collator may be necessary. In particular, many NLP tasks have samples
+suffice, but for more complex tasks a custom collator may be necessary. In particular, many tasks have samples
 with varying sequence lengths which will require a collator that can pad batches correctly. (Link to transformers
 collators or examples here?)
 
+### When to use to_tf_dataset
+
+The astute reader may have noticed at this point that we have offered two approaches to achieve the same goal - if you
+want to pass your dataset to a TensorFlow model, you can either convert the dataset to a `Tensor` or `dict` of `Tensors`
+using `.with_format('tf')`, or you can convert the dataset to a `tf.data.Dataset` with `to_tf_dataset()`. Either of these
+can be passed to `model.fit()`, so which should you choose?
+
+The key thing to recognize is that when you convert the whole dataset to `Tensor`s, it is static and fully loaded into
+RAM. This is simple and convenient, but if any of the following apply, you should probably use `to_tf_dataset()`
+instead:
+
+- Your dataset is too large to fit in RAM. `to_tf_dataset()` streams only one batch at a time, so even very large
+  datasets can be handled with this method.
+- You want to apply random transformations using `dataset.with_transform()` or the `collate_fn`. This is
+  common in several modalities, such as image augmentations when training vision models, or random masking when training
+  masked language models. Using `to_tf_dataset()` will apply those transformations
+  at the moment when a batch is loaded, which means the same samples will get different augmentations each time
+  they are loaded. This is usually what you want.
+- Your data has a variable dimension, such as input texts in NLP that consist of varying
+  numbers of tokens. When you create a batch with samples with a variable dimension, the standard solution is to
+  pad the shorter samples to the length of the longest one. When you stream samples from a dataset with `to_tf_dataset`,
+  you can apply this padding to each batch via your `collate_fn`. (link examples here?) However, if you want to convert
+  such a dataset to dense `Tensor`s, then you will have to pad samples to the length of the longest sample in *the
+  entire dataset!* This can result in huge amounts of padding, which wastes memory and reduces your model's speed.
+
+
+
 ### Caveats and limitations
 
-Right now, `to_tf_dataset()` always return a batched dataset, we will add support for unbatched datasets soon !
+Right now, `to_tf_dataset()` always return a batched dataset - we will add support for unbatched datasets soon!
 
 
 
