--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -21,8 +21,14 @@ array([[1, 2],
        [3, 4]])>}
 ```
 
+<Tip>
+
+A [`Dataset`] object is a wrapper of an Arrow table, which allows fast zero-copy reads from arrays in the dataset to TensorFlow tensors.
+
+</Tip>
+
 This can be useful for converting your dataset to a dict of `Tensor` objects, or for writing a generator to load TF
-samples from it. If you wish to convert the entire dataset to `Tensor`, simply use an empty slice:
+samples from it. If you wish to convert the entire dataset to `Tensor`, simply query the full dataset:
 
 ```py
 >>> ds[:]
@@ -30,6 +36,80 @@ samples from it. If you wish to convert the entire dataset to `Tensor`, simply u
 array([[1, 2],
        [3, 4]])>}
 ```
+
+### N-dimensional arrays
+
+If your dataset consists of N-dimensional arrays, you will see that by default they are considered as nested lists.
+In particular, a TensorFlow formatted dataset outputs a `RaggedTensor` instead of one single tensor:
+
+```py
+>>> from datasets import Dataset
+>>> data = [[[1, 2],[3, 4]],[[5, 6],[7, 8]]]
+>>> ds = Dataset.from_dict({"data": data})
+>>> ds = ds.with_format("tf")
+>>> ds[0]
+{'data': <tf.RaggedTensor [[1, 2], [3, 4]]>}
+```
+
+To get one single tensor, you must explicitly use the Array feature type and specify the shape of your tensors:
+
+```py
+>>> from datasets import Dataset, Features, Array2D
+>>> data = [[[1, 2],[3, 4]],[[5, 6],[7, 8]]]
+>>> features = Features({"data": Array2D(shape=(2, 2), dtype='int32')})
+>>> ds = Dataset.from_dict({"data": data}, features=features)
+>>> ds = ds.with_format("tf")
+>>> ds[0]
+{'data': <tf.Tensor: shape=(2, 2), dtype=int64, numpy=
+ array([[1, 2],
+        [3, 4]])>}
+>>> ds[:2]
+{'data': <tf.Tensor: shape=(2, 2, 2), dtype=int64, numpy=
+ array([[[1, 2],
+         [3, 4]],
+ 
+        [[5, 6],
+         [7, 8]]])>}
+```
+
+
+### Other feature types
+
+[`ClassLabel`] data are properly converted to tensors:
+
+```py
+>>> from datasets import Dataset, Features, ClassLabel
+>>> data = [0, 0, 1]
+>>> features = Features({"data": ClassLabel(names=["negative", "positive"])})
+>>> ds = Dataset.from_dict({"data": data}, features=features) 
+>>> ds = ds.with_format("tf")  
+>>> ds[:3]
+{'data': <tf.Tensor: shape=(3,), dtype=int64, numpy=array([0, 0, 1])>
+```
+
+Strings are also supported:
+
+```py
+>>> from datasets import Dataset, Features 
+>>> text = ["foo", "bar"]
+>>> data = [0, 1] 
+>>> ds = Dataset.from_dict({"text": text, "data": data})  
+>>> ds = ds.with_format("tf") 
+>>> ds[:2]
+{'text': <tf.Tensor: shape=(2,), dtype=string, numpy=array([b'foo', b'bar'], dtype=object)>,
+ 'data': <tf.Tensor: shape=(2,), dtype=int64, numpy=array([0, 1])>}
+```
+
+But if you want, you can explicitly format certain columns and leave the other columns unformatted:
+
+```py
+>>> ds = ds.with_format("tf", columns=["data"], output_all_columns=True)
+>>> ds[:2]
+{'data': <tf.Tensor: shape=(2,), dtype=int64, numpy=array([0, 1])>,
+ 'text': ['foo', 'bar']}
+```
+
+The [`Image`] and [`Audio`] feature types are not supported yet.
 
 ## Data loading
 
@@ -41,7 +121,7 @@ from your dataset and `fit()` on that, but that sounds like a lot of unnecessary
 data from your dataset on-the-fly, we recommend converting your dataset to a `tf.data.Dataset` using the
 `to_tf_dataset()` method.
 
-The `tf.data.Dataset`` class covers a wide range of use-cases - it is often created from Tensors in memory, or using a load function to read files on disc
+The `tf.data.Dataset` class covers a wide range of use-cases - it is often created from Tensors in memory, or using a load function to read files on disc
 or external storage. The dataset can be transformed arbitrarily with the `map()` method, or methods like `batch()`
 and `shuffle()` can be used to create a dataset that's ready for training. These methods do not modify the stored data
 in any way - instead, the methods build a data pipeline graph that will be executed when the dataset is iterated over,
@@ -110,11 +190,6 @@ instead:
   such a dataset to dense `Tensor`s, then you will have to pad samples to the length of the longest sample in *the
   entire dataset!* This can result in huge amounts of padding, which wastes memory and reduces your model's speed.
 
-
-
 ### Caveats and limitations
 
 Right now, `to_tf_dataset()` always return a batched dataset - we will add support for unbatched datasets soon!
-
-
-
