--- a/docs/source/use_dataset.mdx
+++ b/docs/source/use_dataset.mdx
@@ -88,7 +88,8 @@ Use the [`~Dataset.to_tf_dataset`] function to set the dataset format to be comp
 ...     label_cols=["labels"],
 ...     batch_size=2,
 ...     collate_fn=data_collator,
-...     shuffle=True)
+...     shuffle=True
+... )
 ```
 </tf>
 </frameworkcontent>
