--- a/docs/source/use_with_pytorch.mdx
+++ b/docs/source/use_with_pytorch.mdx
@@ -6,7 +6,7 @@
 
 By default, datasets return regular python objects: integers, floats, strings, lists, etc.
 
-To get PyTorch tensors instead, you can set the format of the dataset to "pytorch" using [`Dataset.with_format`]:
+To get PyTorch tensors instead, you can set the format of the dataset to `pytorch` using [`Dataset.with_format`]:
 
 ```py
 >>> from datasets import Dataset
@@ -27,7 +27,7 @@ A [`Dataset`] object is a wrapper of an Arrow table, which allows fast zero-copy
 </Tip>
 
 
-To load the data as tensors on a GPU, you can also specify the `device` argument:
+To load the data as tensors on a GPU, specify the `device` argument:
 ```py
 >>> import torch
 >>> device = torch.device("cuda" if torch.cuda.is_available() else "cpu")
@@ -39,7 +39,7 @@ To load the data as tensors on a GPU, you can also specify the `device` argument
 ### N-dimensional arrays
 
 If your dataset consists of N-dimensional arrays, you will see that by default they are considered as nested lists.
-In particular, a PyTorch formatted dataset outputs nested lists instead of one single tensor:
+In particular, a PyTorch formatted dataset outputs nested lists instead of a single tensor:
 
 ```py
 >>> from datasets import Dataset
@@ -50,7 +50,7 @@ In particular, a PyTorch formatted dataset outputs nested lists instead of one s
 {'data': [tensor([1, 2]), tensor([3, 4])]}
 ```
 
-To get one single tensor, you must explicitly use the Array feature type and specify the shape of your tensors:
+To get a single tensor, you must explicitly use the [`Array`] feature type and specify the shape of your tensors:
 
 ```py
 >>> from datasets import Dataset, Features, Array2D
@@ -121,13 +121,13 @@ Like `torch.utils.data.Dataset` objects, a [`Dataset`] can be passed directly to
 
 ### Optimize data loading
 
-#### Use multiple Workers
+#### Use multiple workers
 
-You can parallelize data loading the `num_workers` argument of a PyTorch `DataLoader` and get a higher throughput.
+You can parallelize data loading with the `num_workers` argument of a PyTorch `DataLoader` and get a higher throughput.
 
 Under the hood, the `DataLoader` starts `num_workers` processes.
 Each process reloads the dataset passed to the `DataLoader` and is used to query examples.
-Reloading the dataset inside a worker doesn't fill up your RAM, since it simply memory-map the dataset again from your disk.
+Reloading the dataset inside a worker doesn't fill up your RAM, since it simply memory-maps the dataset again from your disk.
 
 ```py
 >>> import numpy as np
@@ -141,7 +141,7 @@ Reloading the dataset inside a worker doesn't fill up your RAM, since it simply 
 
 #### Use a BatchSampler
 
-By default the pytorch data loader load batches of data from a dataset one by one like this:
+By default, the PyTorch `DataLoader` load batches of data from a dataset one by one like this:
 
 ```py
 batch = [dataset[idx] for idx in range(start, end)]
@@ -156,7 +156,7 @@ batch = dataset[start:end]
 batch = dataset[list_of_indices]
 ```
 
-For the pytorch data loader to query batches using a list, you can use a `BatchSampler`:
+For the PyTorch `DataLoader` to query batches using a list, you can use a `BatchSampler`:
 
 ```py
 >>> from torch.utils.data.sampler import BatchSampler, RandomSampler
@@ -170,7 +170,7 @@ You must use a `BatchSampler` if you want the transform to be given full batches
 ### Stream data
 
 Loading a dataset in streaming mode is useful to progressively download the data you need while iterating over the dataset.
-Set the format of a streaming dataset to "pytorch", and it inherits from `torch.utils.data.IterableDataset` so you can pass it to a DataLoader:
+Set the format of a streaming dataset to `pytorch`, and it inherits from `torch.utils.data.IterableDataset` so you can pass it to a `DataLoader`:
 
 ```py
 >>> import numpy as np
