--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -11,6 +11,8 @@ This guide will show you how to:
 - Apply a custom formatting transform.
 - Save and export processed datasets.
 
+For more information specific to loading audio datasets, take a look at the <a class="bg-yellow-200 text-yellow-900 dark:bg-yellow-500 px-1 rounded font-bold" href="./audio_process">process audio data</a> guide. If you're working with image datasets, you can check out the <a class="bg-green-200 text-green-900 dark:bg-green-500 px-1 rounded font-bold" href="./image_process">process image data</a> guide.
+
 Load the MRPC dataset from the GLUE benchmark to follow along with our examples:
 
 ```py
